fix icon buttons on dark mode

--- a/css/main.css
+++ b/css/main.css
@@ -11501,12 +11501,10 @@ footer {
 .dark-mode .list-group--flush:last-child .list-group__item:last-child {
   border-bottom: 0; }
 
-.dark-mode .icon-button-group--link {
-  color: #c391fc;
-  border-radius: 50%;
-  transition: all .2s; }
-  .dark-mode .icon-button-group--link:hover {
-    background-color: rgba(195, 145, 252, 0.35);
+.dark-mode .icon-button-group__link {
+  color: #c391fc; }
+  .dark-mode .icon-button-group__link:hover {
+    background-color: rgba(195, 145, 252, 0.24);
     color: #c391fc; }
 
 .a-card {
@@ -11898,6 +11896,7 @@ footer {
   align-items: center;
   justify-content: center; }
   .icon-button-group__link {
+    color: #495469;
     height: 50px;
     width: 50px;
     display: flex;
