--- a/scss/components/_icon-button.scss
+++ b/scss/components/_icon-button.scss
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: center;
     &__link {
+        color: $cloudy;
         height: 50px;
         width: 50px;
         display: flex;
