--- a/scss/themes/dark-mode.scss
+++ b/scss/themes/dark-mode.scss
@@ -173,12 +173,10 @@
   }
 
   .icon-button-group {
-    &--link {
+    &__link {
       color: $light-purple;
-      border-radius: 50%;
-      transition: all .2s;
       &:hover {
-        background-color: rgba($light-purple, 0.35);
+        background-color: rgba($light-purple, $medium-opacity);
         color: $light-purple;
       }
     }
